Add login functionality in the forms, handle devises route redirection. Form is nearly submitting, still getting "Error: Form responses must redirect to another location" in js console

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -82,3 +82,12 @@ input[type="submit"] {
 input[type="submit"]:hover {
   background-color: #0069d9;
 }
+
+/* Center the website content */
+.content-wrapper {
+  display: flex;
+  justify-content: center;
+}
+.content {
+  width: 80%; /* Use 80% of the page */
+}
