--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,3 +1,6 @@
+<div class="content-wrapper">
+  <div class="content">
+
 <h1>All Questions</h1>
 <%= link_to "Ask a Question", new_question_path, class: "button" %>
 <ul>
@@ -9,3 +12,7 @@
     </li>
   <% end %>
 </ul>
+
+  </div>
+</div>
+
