--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,12 +1,19 @@
+<div class="content-wrapper">
+  <div class="content">
+
 <h1><%= @question.title %></h1>
 <p><%= @question.text %></p>
 
 <% if user_signed_in? %>
   <%= render 'answers/form', answer: @answer %>
+  <p>You are answering the question as <%= @user.email %></p>
 <% else %>
   <%= link_to "Sign in to answer", new_user_session_path %>
 <% end %>
 
 <h2>Answers:</h2>
 <%= render 'answers/list', answers: @question.answers %>
+
+  </div>
+</div>
 
